# onelens

./: .env.example  .gitignore  AGENTS.md  API_CONNECTION_STATUS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETE_PERSONA_IMPLEMENTATION.md  CONTRIBUTING.md  FEATURE_RELATIONSHIPS_EXPLAINED.md  FEATURE_SEPARATION_COMPLETE.md  FINAL_SYSTEM_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PERSONA_PAGE_PHASE2_SUMMARY.md  PERSONA_PAGE_SPECIFICATION.md  PERSONA_SINGLE_PRODUCT_DESIGN.md  PERSONA_SYSTEM_COMPLETE.md  README.md  SECURITY.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-guardian.md  docs-reviewer.md  spec-writer.md  test-author.md  type-guardian.md
.claude/hooks/: block-client-names.sh  changelog-reminder.sh  fmt-kotlin.sh  fmt-python.sh
.claude/skills/: gsd-orchestrator
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml
agno-config/: agents.yaml  workflows.yaml
backend/: Dockerfile  KNOWLEDGE_BASE.md  New XLSX Worksheet 1.xlsx  README_feature_initialization.md  alembic.ini  create_initial_migration.py  create_module_features_table.py  create_product_tables.py  create_sample_rfp.py  debug_features_endpoint.py  ensure_single_persona.py  feature_initializer.py  fix_customer_schema.py  initialize_features.py  main.py  pyproject.toml  sample_rfp_format.xlsx  setup.py  simple_agent_test.py  test_agno_api.py  test_agno_workflow.py  test_all_apis.py  test_knowledge_integration.py  test_rfp_simple.py  test_rfp_simple.xlsx
backend-agno/: start.sh
backend/alembic/: env.py
backend/app/agents/: README.md  __init__.py  agent_definitions.py
backend/app/api/v1/: agent.py  battle_cards.py  competitors.py  customers.py  debug.py  epics.py  features.py  i need to create card view of features.md  knowledge.py  module_features.py  persona.py  products.py  rfp.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  analysis.py  base.py  competitor.py  customer.py  enums.py  epic.py  feature.py  module_feature.py  product.py  rfp.py  user.py
backend/app/schemas/: analysis.py  base.py  competitor.py  customer.py  epic.py  feature.py  module_feature.py  product.py  rfp.py  user.py
backend/app/services/: agno_chromadb_knowledge.py  agno_service.py  battle_card_generator.py  chromadb_service.py  competitor_intelligence.py  competitor_scraper.py  embedding.py  knowledge_loader.py  priority_scoring.py  rfp_processor.py
backend/app/tools/: __init__.py  rag_tool.py
backend/scripts/: init_knowledge_base.py
backend/sql/: init.sql
backend/tests/: conftest.py
backend/tests/api/: test_agno_integration.py
backend/tests/services/: test_agno_service.py
backend/tmp/: agno_workflows_v2.db  onelens_team_memory.db
docs/: DECISIONS.md  LESSONS-LEARNED.md  PROGRESS.md  SESSION-START.md  VISION-AND-ROADMAP.md  architecture.md  comparison.md  concepts.md  contributing.md  faq.md  governance.md  introduction.md  philosophy.md  roadmap.md  security.md  terms.md  vision.md  vue-psi-poc.md  workspaces.md
docs/design/: palace-mcp.md  phase-r-release-snapshots.md  phase-r-stage-1d-snapshot-as-seed.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ag-ui/: AgentChat.tsx
frontend/src/components/ai/: AIAssistant.tsx
frontend/src/components/analysis/: FeatureAnalysis.tsx  FeatureAnalysisCard.tsx
frontend/src/components/battlecards/: BattleCardsGenerator.tsx
frontend/src/components/customers/: CustomerDialog.tsx  CustomerList.tsx
frontend/src/components/dashboard/: DashboardWidgets.tsx
frontend/src/hooks/: useEpics.ts  useFeatures.ts
frontend/src/lib/api/: battleCards.ts  (+1 more)
frontend/src/pages/: AgentPage.tsx  AnalysisReports.tsx  BattleCardBuilder.tsx  BattleCardView.tsx  CompetitorAnalysis.tsx  CompetitorManagement.tsx  CustomerInsights.tsx  Dashboard.tsx  EditEpic.tsx  EpicDetail.tsx  FeatureAnalysis.tsx  FeatureDashboard.tsx  Index.tsx  NotFound.tsx  ProductDetail.tsx  customers.tsx
frontend/src/services/: api.ts
frontend/src/store/: store.js
frontend/src/types/: index.ts  product.ts
frontend/src/views/: FeatureDetail.tsx
plugin/: build.gradle.kts  gradle.properties  settings.gradle.kts
plugin/gradle/: libs.versions.toml
python/: pyproject.toml
python/scripts/: regen_cli.sh
python/src/onelens/: SKILL.md  __init__.py  cli.py  cli_generated.py  daemon.py  mcp_server.py
python/src/onelens/context/: __init__.py  config.py  embedder.py  layers.py  palace.py  reranker.py  retrieval.py  searcher.py
python/src/onelens/context/backends/: __init__.py  chroma.py
python/src/onelens/context/embed_backends/: __init__.py  base.py  local_backend.py  local_reranker.py  modal_backend.py  openai_compat.py
python/src/onelens/graph/: analysis.py  db.py  queries.py
python/src/onelens/graph/backends/: falkordb_backend.py  falkordb_lite.py  neo4j_backend.py
python/src/onelens/importer/: bridge_http.py  delta_loader.py  loader.py  pagerank.py  schema.py
python/src/onelens/mcp/: server.py
python/src/onelens/miners/: __init__.py  code_miner.py  flyway_detector.py  sql_miner.py
python/src/onelens/models/: export_schema.py
python/src/onelens/palace/: __init__.py  aaak.py  diary.py  drawers.py  kg.py  navigation.py  paths.py  protocol.py  schemas.py  store.py  taxonomy.py  tunnels.py  wal.py
python/src/onelens/remote/: modal_app.py
python/src/onelens/snapshots/: __init__.py  consumer.py  publisher.py  seed.py
python/tests/palace/: test_smoke.py
scripts/: bundle-skill.sh  bundle.sh  install-skill.sh  regenerate-palace-cli.sh  restore.sh  vm-deploy.sh
skills/onelens/: SKILL.md
skills/onelens/references/: capabilities.md  graph-schema.md  jvm.md  queries-code.md  queries-sql.md  queries-tests.md  recipes.md  retrieval.md  vue3.md
(+116 files in other folders)
