[project]
name = "backend"
version = "0.1.0"
description = "Epic Analysis System Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "PyMuPDF>=1.23.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "numpy>=1.24.0",
    "agno>=1.6.3",
    "openai>=1.88.0",
    "ag-ui-protocol>=0.1.5",
    "chromadb>=0.4.0",
]
