[project]
name = "onelens"
version = "0.2.0"
description = "Code knowledge graph for Java/Spring Boot — imports IntelliJ exports into a graph DB"
requires-python = ">=3.10"
dependencies = [
    "falkordb>=1.6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "fastmcp>=3.2.0",
    "cyclopts>=3.0.0",
    "networkx>=3.0",          # PageRank centrality prebake at import time
    "pyyaml>=6.0",            # Benchmark cases.yaml + agent configs
    "sqlglot>=25.0",          # Phase C6 — parse Flyway migrations + custom SQL queries (AST-level table/column extraction)
    "orjson>=3.9",            # 3-5× faster JSON loads on big exports (500MB+ the reference project takes ~10s with stdlib, ~2s with orjson)
    # Embedded FalkorDB — bundled Redis + FalkorDB module (.so). Default backend
    # for zero-Docker OSS UX. `pip install onelens` → ready to sync. Docker path
    # (`falkordb` backend) stays available for production / browser-UI use.
    # Linux + macOS only; Windows users must use the Docker backend.
    "falkordblite>=0.9.0",
]

[project.optional-dependencies]
# Semantic retrieval stack. Default backend is Modal — plugin side ships
# NO local GPU / ONNX deps. Heavy bits (onnxruntime-gpu, fastembed, Qwen3
# weights) live inside the Modal container image (see remote/modal_app.py).
# Local venv footprint: ~80 MB (chromadb + modal + httpx + numpy).
#
# OpenAI-compat backend uses plain HTTP — no SDK required.
context = [
    "chromadb>=1.0.0",
    "modal>=0.74",                # client for the Modal embed/rerank app
    "httpx>=0.27",                # OpenAI-compat bulk-concurrent embedding calls
    "numpy>=1.24",
]
# `lite` extra kept for backward compat — falkordblite is already in the base
# dep list, so this resolves to a no-op. Remove in v0.3.
lite = ["falkordblite>=0.9.0"]
neo4j = ["neo4j>=5.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
# Single unified CLI — palace tools (drawer / kg / diary / tunnels) are now
# subcommands of `onelens call-tool` via the unified MCP server. The previous
# `onelens-palace` entry point is removed; import `onelens.palace.*` directly
# if you need the business modules outside the MCP surface.
onelens = "onelens.cli_generated:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
